# bevy_proto_resource_tuples

./: Cargo.toml
examples/: basic.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
